Fix border collapse

--- a/themes-default/slim/src/style/vgt-table.scss
+++ b/themes-default/slim/src/style/vgt-table.scss
@@ -6,6 +6,7 @@
         margin-left: auto;
         text-align: left;
         border-spacing: 0;
+        border-collapse: initial;
     
         th,
         td {
